--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 ---
-layout: default  
-title: Home  
+layout: default
+title: Home
 ---
 
-  
- {{ page.title }}  
+
+ {{ page.title }}
 
 # {{ site.title }}
 
@@ -14,17 +14,16 @@ title: Home
 * [About]({{%20'/sobre-nosotros'%20|%20relative_url%20}})
 * [Contact]({{%20'/contacto'%20|%20relative_url%20}})
 
-  
+
 
 ## Bienvenido a {{ site.title }}!
 
-  
 
-Esta es la página home de su sitio web.
 
-  
+Limpiezas técnicas en el Baix Llobregat.
 
-Escriba el contenido que desee entre las etiqueta &lt;main&gt; y &lt;/main&gt;
+
+
 
     <!-- List of recent posts -->
     <h3>Artículos recientes</h3>
