--- a/index.html
+++ b/index.html
@@ -3,20 +3,31 @@ layout: default
 title: Home
 ---
 
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>{{ page.title }}</title>
+</head>
 
- {{ page.title }}
+<body>
 
-# {{ site.title }}
+  <header>
+    <h1>{{ site.title }}</h1>
+    <p>{{ site.description }}</p>
+  </header>
 
-{{ site.description }}
+  <nav>
+      <ul>
+        <li>[Home]({{%20'/'%20|%20relative_url%20}})</li>
+        <li>[About]({{%20'/sobre-nosotros'%20|%20relative_url%20}})</li>
+        <li>[Contact]({{%20'/contacto'%20|%20relative_url%20}})</li>
+      </ul>
+</nav>
 
-* [Home]({{%20'/'%20|%20relative_url%20}})
-* [About]({{%20'/sobre-nosotros'%20|%20relative_url%20}})
-* [Contact]({{%20'/contacto'%20|%20relative_url%20}})
 
-
-
-## Bienvenido a {{ site.title }}!
+<h2>Bienvenido a {{ site.title }}, empresa de limpiezas técnicas en el Baix Llobregat</h2>
 
 
 
@@ -36,4 +47,6 @@ Limpiezas técnicas en el Baix Llobregat.
       {% endfor %}
     </ul>
 
+</body>
+</html>
 © {{ site.time | date: "%Y" }} {{ site.author }}. Todos los derechos reservados
