--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ title: Home
   </header>
 
 
-<nav class="barra-lateral">
+<nav id="menu-pral">
       <ul>
         <li><a href="{{%20'/'%20|%20relative_url%20}}">Inicio</a></li>
         <li><a href="{{%20'/sobre-nosotros'%20|%20relative_url%20}}">Sobre nosotros</a></li>
