--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@ title: Home
 <nav id="menu-pral">
       <ul>
         <li><a href="{{%20'/'%20|%20relative_url%20}}">Inicio</a></li>
-        <li><a href="{{%20'/sobre-nosotros'%20|%20relative_url%20}}">Sobre nosotros</a></li>
-        <li><a href="{{%20'/contacto'%20|%20relative_url%20}}">Contacto</a></li>
+        <li><a href="{{ '/sobre-nosotros' | relative_url }}">Sobre nosotros</a></li>
+        <li><a href="{{ '/contacto' | relative_url }}">Contacto</a></li>
       </ul>
 </nav>
 
