--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ title: Home
 
 <nav id="menu-pral">
       <ul>
-        <li><a href="{{%20'/'%20|%20relative_url%20}}">Inicio</a></li>
+        <li><a href="{{ '/' | relative_url }}">Inicio</a></li>
         <li><a href="{{ '/sobre-nosotros' | relative_url }}">Sobre nosotros</a></li>
         <li><a href="{{ '/contacto' | relative_url }}">Contacto</a></li>
       </ul>
