--- a/index.html
+++ b/index.html
@@ -19,20 +19,11 @@ title: Home
   </header>
 
 
-<nav id="menu-pral">
-      <ul>
-        <li><a href="{{ '/' | relative_url }}">Inicio</a></li>
-        <li><a href="{{ '/sobre-nosotros' | relative_url }}">Sobre nosotros</a></li>
-        <li><a href="{{ '/contacto' | relative_url }}">Contacto</a></li>
-      </ul>
-</nav>
+<div class="frame-1"style="background-image: url('/assets/img/mujer-limpieza-cristales-ventana-no-atrib-Pixabay.com.webp') ">
+<h2>{{ site.title }}, servicios de limpiezas técnicas en el Baix Llobregat</h2>
 
 
-<h2>Bienvenido a {{ site.title }}, empresa de limpiezas técnicas en el Baix Llobregat</h2>
-
-<h3>Sitio web en construcción.</h3>
-
-
+</div> <!-- frame-1 -->
 
     <!-- List of recent posts
     <h3>Artículos recientes</h3>
