--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@ title: Home
 <div class="frame-1"style="background-image: url('/assets/img/mujer-limpieza-cristales-ventana-no-atrib-Pixabay.com.webp') ">
   <header>
     <h1>{{ site.title }}</h1>
-    <p>{{ site.description }}</p>
+    
   </header>
 
-<h2>{{ site.title }}, servicios de limpiezas técnicas en el Baix Llobregat</h2>
+<h2>{{ site.title }}, {{ site.description }}</h2>
 
 
 </div> <!-- frame-1 -->
