--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@ title: Home
     
   </header>
 
-  <div class="txt-
-<h2>{{ site.title }}, {{ site.description }}</h2>
-
+  <div class="descripcion-empresa">
+<h2>{{ site.description }}</h2>
+</div>
 
 </div> <!-- frame-1 -->
 
