--- a/index.html
+++ b/index.html
@@ -21,6 +21,25 @@ title: Home
 
 </div> <!-- frame-1 -->
 
+<!-- FAQ en menú colapsable -->
+
+<h2>Preguntas frecuentes</h2>
+
+<button type="button" class="colapsable">Como cliente, quiero estar seguro de que ¿Qué garantía tengo de quela empresa que contrato cumple todas las leyes y normativas vigentes</button>
+
+<div class="contenido">Recuerde que el incumplimiento de las leyes en materia laboral y fiscal también le afecta a usted como cliente. Cuando solicite presupuestos a empresas, exija la siguiente documentación:
+
+  · Certificado TC2 de los trabajadores en plantlla, o autónomo de los trabajadores, seǵun proceda. Con el TC2 puede verificar que la contratación del personal en plantilla es efectiva y vigente.
+  · Seguro de responsabilidad civil. Este le otorgará un grado más de tranquilidad, ya que cubrirá los posibles daños.
+</div> <!-- .contenido  -->
+
+<button type="button" class="colapsable">Exactamente ¿Que incluyen los servicios que proponen?</button>
+<div class="contenido">
+En pocas palabras, todo. Formalizamos nuestros acuerdos con nuestros clientes a través de un contrato completamente transparente, que no conlleva ninguna obligación de permanencia por su parte, y donde todos los elementos incluídos quedan explícitos. Productos y utensilios de limpieza, desplazamientos a  de los trabajadores a su centro, etc.
+
+</div>
+
+
     <!-- List of recent posts
     <h3>Artículos recientes</h3>
     <ul>
@@ -32,6 +51,14 @@ title: Home
       {% endfor %}
     </ul>  -->
 
+
+
+
+
+
+
+
+    
 </body>
 </html>
 © {{ site.time | date: "%Y" }} {{ site.author }}. Todos los derechos reservados
