--- a/index.html
+++ b/index.html
@@ -6,14 +6,12 @@ title: Home
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>{{ page.title }}</title>
+ {% include head.html %}
 </head>
 
 <body>
 
-<div class="frame-1"style="background-image: url('/assets/img/mujer-limpieza-cristales-ventana-no-atrib-Pixabay.com.webp') ">
+<div class="frame-1" style="background-image: url('/assets/img/mujer-limpieza-cristales-ventana-no-atrib-Pixabay.com.webp') background-repeat: no-repeat; ">
 <div class="descripcion-empresa">
     <h1>{{ site.title }}</h1>
     <h2>{{ site.description }}</h2>
@@ -36,7 +34,6 @@ title: Home
 <button type="button" class="colapsable">Exactamente ¿Que incluyen los servicios que proponen?</button>
 <div class="contenido">
 En pocas palabras, todo. Formalizamos nuestros acuerdos con nuestros clientes a través de un contrato completamente transparente, que no conlleva ninguna obligación de permanencia por su parte, y donde todos los elementos incluídos quedan explícitos. Productos y utensilios de limpieza, desplazamientos a  de los trabajadores a su centro, etc.
-
 </div>
 
 
