--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ title: Home
 
 <body>
 
-<div class="frame-1" style="background-image: url('/assets/img/mujer-limpieza-cristales-ventana-no-atrib-Pixabay.com.webp') background-repeat: no-repeat; ">
+<div class="frame-1" style="background-image: url('/assets/img/mujer-limpieza-cristales-ventana-no-atrib-Pixabay.com.webp') background-repeat: no-repeat;  background-position: center; ">
 <div class="descripcion-empresa">
     <h1>{{ site.title }}</h1>
     <h2>{{ site.description }}</h2>
