--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 ---
 layout: default
-title: Home
+title: AB Limpieza
 ---
 
-<!DOCTYPE html>
-<html lang="es">
+>
 <head>
  {% include head.html %}
 </head>
