--- a/index.html
+++ b/index.html
@@ -3,10 +3,6 @@ layout: default
 title: AB Limpieza
 ---
 
-<head>
- {% include head.html %}
-</head>
-
 <div class="frame-1" style="background-image: url('/assets/img/mujer-limpieza-cristales-ventana-no-atrib-Pixabay.com.webp'); background-repeat: no-repeat;  background-position: center; ">
 <div class="descripcion-empresa">
     <h1>{{ site.title }}</h1>
@@ -44,6 +40,6 @@ En pocas palabras, todo. Formalizamos nuestros acuerdos con nuestros clientes a 
       {% endfor %}
     </ul> 
 
-
+Este contenido va en el archivo _includes/footer.html
 © {{ site.time | date: "%Y" }} {{ site.author }}. Todos los derechos reservados
  -->
