--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@ layout: default
 title: AB Limpieza
 ---
 
-<div class="frame-1" style="background-image: url('/assets/img/mujer-limpieza-cristales-ventana-no-atrib-Pixabay.com.webp'); background-repeat: no-repeat;  background-position: center; ">
+<div class="frame-1 img-fondo">
 <div class="descripcion-empresa">
     <h1>{{ site.title }}</h1>
     <h2>{{ site.description }}</h2>
 </div>
-
 </div> <!-- frame-1 -->
 
 <!-- FAQ en menú colapsable -->
