--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ title: AB Limpieza
 </div> <!-- frame-1 -->
 
 <!-- FAQ en menú colapsable -->
-
+<div id="faq">
 <h2>Preguntas frecuentes</h2>
 
 <button type="button" class="colapsable">Como cliente, quiero estar seguro de que ¿Qué garantía tengo de quela empresa que contrato cumple todas las leyes y normativas vigentes</button>
@@ -26,7 +26,7 @@ title: AB Limpieza
 <div class="contenido">
 En pocas palabras, todo. Formalizamos nuestros acuerdos con nuestros clientes a través de un contrato completamente transparente, que no conlleva ninguna obligación de permanencia por su parte, y donde todos los elementos incluídos quedan explícitos. Productos y utensilios de limpieza, desplazamientos a  de los trabajadores a su centro, etc.
 </div>
-
+</div> <!-- #faq -->
 
     <!-- List of recent posts
     <h3>Artículos recientes</h3>
