--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ title: AB Limpieza
 </div> <!-- frame-1 -->
 
 <!-- FAQ en menú colapsable -->
-<div id="faq">
+<div id="faq" class="col-6">
 <h2>Preguntas frecuentes</h2>
 
 <button type="button" class="colapsable">Como cliente, quiero estar seguro de que ¿Qué garantía tengo de quela empresa que contrato cumple todas las leyes y normativas vigentes</button>
