--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@ title: AB Limpieza
 
 <button type="button" class="colapsable">Como cliente, quiero estar seguro de que ¿Qué garantía tengo de quela empresa que contrato cumple todas las leyes y normativas vigentes</button>
 
-<div class="contenido">Recuerde que el incumplimiento de las leyes en materia laboral y fiscal también le afecta a usted como cliente. Cuando solicite presupuestos a empresas, exija la siguiente documentación:
+<div class="contenido"><p>Recuerde que el incumplimiento de las leyes en materia laboral y fiscal también le afecta a usted como cliente. Cuando solicite presupuestos a empresas, exija la siguiente documentación:
 
   · Certificado TC2 de los trabajadores en plantlla, o autónomo de los trabajadores, seǵun proceda. Con el TC2 puede verificar que la contratación del personal en plantilla es efectiva y vigente.
-  · Seguro de responsabilidad civil. Este le otorgará un grado más de tranquilidad, ya que cubrirá los posibles daños.
+  · Seguro de responsabilidad civil. Este le otorgará un grado más de tranquilidad, ya que cubrirá los posibles daños.</p>
 </div> <!-- .contenido  -->
 
 <button type="button" class="colapsable">Exactamente ¿Que incluyen los servicios que proponen?</button>
 <div class="contenido">
-En pocas palabras, todo. Formalizamos nuestros acuerdos con nuestros clientes a través de un contrato completamente transparente, que no conlleva ninguna obligación de permanencia por su parte, y donde todos los elementos incluídos quedan explícitos. Productos y utensilios de limpieza, desplazamientos a  de los trabajadores a su centro, etc.
+<p>En pocas palabras, todo. Formalizamos nuestros acuerdos con nuestros clientes a través de un contrato completamente transparente, que no conlleva ninguna obligación de permanencia por su parte, y donde todos los elementos incluídos quedan explícitos. Productos y utensilios de limpieza, desplazamientos a  de los trabajadores a su centro, etc.</p>
 </div>
 </div> <!-- #faq -->
 
