--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ title: AB Limpieza
 </div>
 </div> <!-- frame-1 -->
 
-<!-- FAQ en menú colapsable -->
+<!-- FAQ en menú colapsable Fuente: https://www.w3schools.com/howto/howto_js_collapsible.asp -->
 <div id="faq" class="col-6">
 <h2>Preguntas frecuentes</h2>
 
